--- a/devII/package.json
+++ b/devII/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular": "^1.8.3",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
