--- a/devII/package.json
+++ b/devII/package.json
@@ -24,6 +24,7 @@
     "angular": "^1.8.3",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
