--- a/devII/angular.json
+++ b/devII/angular.json
@@ -70,6 +70,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "ssl": false,
           "configurations": {
             "production": {
               "browserTarget": "devII:build:production"
